<resources>
    <string name="app_name">ToWatch</string>
    <string name="add_movie">Add Movie</string>
    <string name="list_movies">List movies</string>
    <string name="home_subtitle_1">Welcome back, %s!</string>
    <string name="home_subtitle_2">What are you watching today, %s?</string>
    <string name="search">Search...</string>
    <string name="movie_name">Movie Name</string>
    <string name="filter_adult_content">Filter adult content</string>
    <string name="confirm">Confirm</string>
    <string name="name_label">Name:</string>
    <string name="no_image_found">No Image Found</string>
    <string name="movie_description">Movie Description</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="movie_image">Movie Image</string>
    <string name="welcome">Welcome!</string>
    <string name="description_label">Description:</string>
    <string name="no_results_found">No results found</string>
    <string name="set_as_seen">Set as Seen</string>
    <string name="delete">Delete</string>
    <string name="seen_with_others_qr_code">Seen with others QR code</string>
    <string name="qr_info">Let your friends scan this code to set that you\'ve watched it together</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="scan_seen_qr">Scan QR</string>
    <string name="setseen_external_description">You\'re in! Now wait for confirmation...</string>
    <string name="reset_seen_state">Are you sure you want to reset this movie seen state?</string>
    <string name="confirm_delete">Are you sure you want to delete this movie?</string>
    <string name="users_label">Users:</string>
    <string name="save_data">Save data</string>
    <string name="settings">Settings</string>
    <string name="local_user_postfix">" (You)"</string>
    <string name="not_seen">Not seen</string>
    <string name="seen_with">Seen with</string>
    <string name="invalid_name">Invalid name</string>
    <string name="has_been_seen">Has been seen</string>
    <string name="select_movie">Select a movie:</string>
    <string name="searching">Searching...</string>
    <string name="developed_by">Developed by: Alberto Arduini</string>
    <string name="libs_and_techs_used">Libraries and Technologies used:</string>
    <string name="tmbd" translatable="false">TMBd</string>
    <string name="tmdb_link" translatable="false">https://www.themoviedb.org/</string>
    <string name="themoviedbapi" translatable="false">themoviedbapi</string>
    <string name="themoviedbapi_link" translatable="false">https://github.com/holgerbrandl/themoviedbapi/</string>
    <string name="zxing" translatable="false">zxing-android-embedded</string>
    <string name="zxing_link" translatable="false">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="kryonet" translatable="false">kryonet</string>
    <string name="kryonet_link" translatable="false">https://github.com/crykn/kryonet</string>
    <string name="info" translatable="false">Info</string>
    <string name="qr_info_network">Make sure that the other users are connected to the same WiFi network!</string>
    <string name="not_connected_wifi">Not connected to a WiFi Network</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="not_connected">Not connected to a valid Network</string>
</resources>