<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/detailsMenu_settings_menuItem"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/detailsMenu_edit_menuItem"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/detailsMenu_delete_menuItem"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/detailsMenu_info_menuItem"
        android:title="@string/info"
        app:showAsAction="never" />
</menu>