<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/detailsMenu_seen_menuItem"
        android:title="@string/set_as_seen"
        android:icon="@drawable/ic_seen_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/detailsMenu_edit_menuItem"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_24"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/detailsMenu_delete_menuItem"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_24"
        app:showAsAction="never"
        />

</menu>