<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsActivity_parent_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.ToWatch.ActionBar"
            app:popupTheme="@style/Theme.ToWatch.ActionBar.Popup"
            app:title="@string/app_name"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/developed_by"
                style="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/libs_and_techs_used"
                style="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/tmbd"
                style="@style/TextAppearance.MaterialComponents.Body1" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:src="@drawable/ic_tmdb_logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:autoLink="web"
                android:text="@string/tmdb_link"
                style="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/themoviedbapi"
                style="@style/TextAppearance.MaterialComponents.Body1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:autoLink="web"
                android:text="@string/themoviedbapi_link"
                style="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/zxing"
                style="@style/TextAppearance.MaterialComponents.Body1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:autoLink="web"
                android:text="@string/zxing_link"
                style="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:text="@string/kryonet"
                style="@style/TextAppearance.MaterialComponents.Body1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:autoLink="web"
                android:text="@string/kryonet_link"
                style="@style/TextAppearance.MaterialComponents.Body1" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>