<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="@dimen/spacing_horizontal">

    <TextView
        android:id="@+id/homeFragment_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_gravity="center"
        style="@style/TextAppearance.MaterialComponents.Headline3" />

    <TextView
        android:id="@+id/homeFragment_subtitle_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/home_subtitle_1"
        style="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <Button
        android:id="@+id/homeFragment_addMovie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add_movie"
        android:gravity="center"
        android:layout_gravity="center"
        app:icon="@drawable/ic_add_24" />

    <Button
        android:id="@+id/homeFragment_listMovies_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/list_movies"
        android:gravity="center"
        android:layout_gravity="center"
        app:icon="@drawable/ic_menu_24" />

</androidx.appcompat.widget.LinearLayoutCompat>