<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/setSeenMasterFragment_movieName_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline3"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/setSeenMasterFragment_networkSection_layout"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setSeenMasterFragment_subtitle_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_info"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_info_network"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

                <ImageView
                    android:id="@+id/setSeenMasterFragment_qr_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/seen_with_others_qr_code"
                    tools:src="@tools:sample/avatars"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <include layout="@layout/fragment_setseen_userlist" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/setSeenMasterFragment_confirm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/confirm"
        android:src="@drawable/ic_confirm_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>