<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailsFragment_movieName_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/movie_name"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline3"/>

            <ImageView
                android:id="@+id/detailsFragment_moviePoster_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/movie_image"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/detailsFragment_noPosterText_textView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_poster_height"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/no_image_found"
                android:textColor="?attr/colorOnPrimary"
                android:visibility="gone"
                style="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:id="@+id/detailsFragment_movieDescription_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:maxHeight="150dp"
                style="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/detailsFragment_seen_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/not_seen"
                style="@style/TextAppearance.MaterialComponents.Body1" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detailsFragment_setSeen_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_seen_24"
        android:contentDescription="@string/set_as_seen"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>