<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/setSeenExternalFragment_movieName_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setseen_external_description"
                android:gravity="center"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <ImageView
                android:id="@+id/setSeenExternalFragment_moviePoster_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/movie_image"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/setSeenExternalFragment_noPosterText_textView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/no_image_found"
                android:textColor="?attr/colorOnPrimary"
                android:visibility="gone"
                style="@style/TextAppearance.MaterialComponents.Headline5" />

            <include layout="@layout/fragment_setseen_userlist" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>