<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:cardCornerRadius="5dp"
    app:contentPadding="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemMovie_movieName_textView"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/movie_name"
            android:textColor="?attr/colorOnPrimary"/>

        <ImageView
            android:id="@+id/itemMovie_movieImage_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/movie_image"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/itemMovie_noImage_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/no_image_found"
            android:padding="5dp"
            android:textColor="?attr/colorOnPrimary"
            android:background="?attr/colorPrimary"
            android:visibility="gone"
            style="@style/TextAppearance.MaterialComponents.Headline5"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>