<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:labelFor="@id/editMovie_movieName_editText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editMovie_movieName_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
                android:autofillHints=""
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editMovie_searchInfo_imageButton"/>

            <ImageButton
                android:id="@+id/editMovie_searchInfo_imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                android:src="@drawable/ic_search_24"
                android:contentDescription="@string/search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/editMovie_movieName_editText"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description_label"
            android:labelFor="@id/editMovie_movieDescription_editText" />

        <EditText
            android:id="@+id/editMovie_movieDescription_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:inputType="textMultiLine"
            android:imeOptions="flagNoExtractUi"
            android:autofillHints=""/>

        <Button
            android:id="@+id/editMovie_apply_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm"
            app:icon="@drawable/ic_confirm_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>